reports/0041_epi_cert_mutation_full.out/mutants.out/log/crates__tracewake-core__src__events__envelope.rs_line_1110_col_5.log

*** crates/tracewake-core/src/events/envelope.rs:1110:5: replace deserialize_cause -> Result<EventCause, EventEnvelopeParseError> with Ok(Default::default())

*** mutation diff:
--- crates/tracewake-core/src/events/envelope.rs
+++ replace deserialize_cause -> Result<EventCause, EventEnvelopeParseError> with Ok(Default::default())
@@ -1102,28 +1102,17 @@
         EventCause::Event(id) => format!("event:{}", id.as_str()),
         EventCause::Proposal(id) => format!("proposal:{}", id.as_str()),
         EventCause::ValidationReport(id) => format!("validation_report:{}", id.as_str()),
         EventCause::Process(id) => format!("process:{}", id.as_str()),
     }
 }
 
 fn deserialize_cause(value: &str) -> Result<EventCause, EventEnvelopeParseError> {
-    let (kind, value) = value
-        .split_once(':')
-        .ok_or(EventEnvelopeParseError::UnknownCause)?;
-    match kind {
-        "event" => Ok(EventCause::Event(EventId::new(value)?)),
-        "proposal" => Ok(EventCause::Proposal(ProposalId::new(value)?)),
-        "validation_report" => Ok(EventCause::ValidationReport(ValidationReportId::new(
-            value,
-        )?)),
-        "process" => Ok(EventCause::Process(ProcessId::new(value)?)),
-        _ => Err(EventEnvelopeParseError::UnknownCause),
-    }
+    Ok(Default::default()) /* ~ changed by cargo-mutants ~ */
 }
 
 fn serialize_random_draw(draw: &RandomDrawRef) -> String {
     [draw.scope.clone(), draw.draw_id.clone(), draw.value.clone()]
         .into_iter()
         .map(|part| encode(&part))
         .collect::<Vec<_>>()
         .join(":")


*** /home/joeloverbeck/.rustup/toolchains/1.93.0-x86_64-unknown-linux-gnu/bin/cargo test --no-run --verbose --workspace --locked
       Dirty tracewake-core v0.1.0 (/tmp/cargo-mutants-tracewake-KPbovd.tmp/crates/tracewake-core): the file `crates/tracewake-core/src/events/envelope.rs` has changed (1781910996.255924624s, 4s after last build at 1781910992.255924617s)
   Compiling tracewake-core v0.1.0 (/tmp/cargo-mutants-tracewake-KPbovd.tmp/crates/tracewake-core)
     Running `/home/joeloverbeck/.rustup/toolchains/1.93.0-x86_64-unknown-linux-gnu/bin/rustc --crate-name tracewake_core --edition=2021 crates/tracewake-core/src/lib.rs --error-format=json --json=diagnostic-rendered-ansi,artifacts,future-incompat --emit=dep-info,link -C embed-bitcode=no -C debuginfo=2 --test --check-cfg 'cfg(docsrs,test)' --check-cfg 'cfg(feature, values())' -C metadata=2fc44e5b19aef358 -C extra-filename=-b96b951b3689326d --out-dir /tmp/cargo-mutants-tracewake-KPbovd.tmp/target/debug/deps -C incremental=/tmp/cargo-mutants-tracewake-KPbovd.tmp/target/debug/incremental -L dependency=/tmp/cargo-mutants-tracewake-KPbovd.tmp/target/debug/deps`
     Running `/home/joeloverbeck/.rustup/toolchains/1.93.0-x86_64-unknown-linux-gnu/bin/rustc --crate-name tracewake_core --edition=2021 crates/tracewake-core/src/lib.rs --error-format=json --json=diagnostic-rendered-ansi,artifacts,future-incompat --crate-type lib --emit=dep-info,metadata,link -C embed-bitcode=no -C debuginfo=2 --check-cfg 'cfg(docsrs,test)' --check-cfg 'cfg(feature, values())' -C metadata=e33c3a3bd335069b -C extra-filename=-95b4b25dfac705df --out-dir /tmp/cargo-mutants-tracewake-KPbovd.tmp/target/debug/deps -C incremental=/tmp/cargo-mutants-tracewake-KPbovd.tmp/target/debug/incremental -L dependency=/tmp/cargo-mutants-tracewake-KPbovd.tmp/target/debug/deps`
error[E0277]: the trait bound `EventCause: Default` is not satisfied
    --> crates/tracewake-core/src/events/envelope.rs:1110:8
     |
1110 |     Ok(Default::default()) /* ~ changed by cargo-mutants ~ */
     |        ^^^^^^^^^^^^^^^^^^ unsatisfied trait bound
     |
help: the trait `Default` is not implemented for `EventCause`
    --> crates/tracewake-core/src/events/envelope.rs:673:1
     |
 673 | pub enum EventCause {
     | ^^^^^^^^^^^^^^^^^^^

For more information about this error, try `rustc --explain E0277`.
error: could not compile `tracewake-core` (lib) due to 1 previous error

Caused by:
  process didn't exit successfully: `/home/joeloverbeck/.rustup/toolchains/1.93.0-x86_64-unknown-linux-gnu/bin/rustc --crate-name tracewake_core --edition=2021 crates/tracewake-core/src/lib.rs --error-format=json --json=diagnostic-rendered-ansi,artifacts,future-incompat --crate-type lib --emit=dep-info,metadata,link -C embed-bitcode=no -C debuginfo=2 --check-cfg 'cfg(docsrs,test)' --check-cfg 'cfg(feature, values())' -C metadata=e33c3a3bd335069b -C extra-filename=-95b4b25dfac705df --out-dir /tmp/cargo-mutants-tracewake-KPbovd.tmp/target/debug/deps -C incremental=/tmp/cargo-mutants-tracewake-KPbovd.tmp/target/debug/incremental -L dependency=/tmp/cargo-mutants-tracewake-KPbovd.tmp/target/debug/deps` (exit status: 1)
warning: build failed, waiting for other jobs to finish...
error[E0277]: the trait bound `envelope::EventCause: Default` is not satisfied
    --> crates/tracewake-core/src/events/envelope.rs:1110:8
     |
1110 |     Ok(Default::default()) /* ~ changed by cargo-mutants ~ */
     |        ^^^^^^^^^^^^^^^^^^ unsatisfied trait bound
     |
help: the trait `Default` is not implemented for `envelope::EventCause`
    --> crates/tracewake-core/src/events/envelope.rs:673:1
     |
 673 | pub enum EventCause {
     | ^^^^^^^^^^^^^^^^^^^

error: could not compile `tracewake-core` (lib test) due to 1 previous error

Caused by:
  process didn't exit successfully: `/home/joeloverbeck/.rustup/toolchains/1.93.0-x86_64-unknown-linux-gnu/bin/rustc --crate-name tracewake_core --edition=2021 crates/tracewake-core/src/lib.rs --error-format=json --json=diagnostic-rendered-ansi,artifacts,future-incompat --emit=dep-info,link -C embed-bitcode=no -C debuginfo=2 --test --check-cfg 'cfg(docsrs,test)' --check-cfg 'cfg(feature, values())' -C metadata=2fc44e5b19aef358 -C extra-filename=-b96b951b3689326d --out-dir /tmp/cargo-mutants-tracewake-KPbovd.tmp/target/debug/deps -C incremental=/tmp/cargo-mutants-tracewake-KPbovd.tmp/target/debug/incremental -L dependency=/tmp/cargo-mutants-tracewake-KPbovd.tmp/target/debug/deps` (exit status: 1)

*** result: Failure(101)
